# connecting-osp

./: .gitignore  README.md  _quarto.yml  about.qmd  index.qmd  projects.csv  projects.qmd  pyproject.toml  requirements.txt  styles.css
data/: projects.csv
